--- a/css/main.css
+++ b/css/main.css
@@ -2,43 +2,41 @@
   position: fixed;
   top: 68px; /* navbar 높이 */
   left: -250px;
-  width: 250px;
+  width: 200px;
   height: 100%;
   background-color: #f8f9fa;
   overflow-y: auto;
   transition: left 0.3s ease;
   z-index: 999;
+  padding: 1rem 0;
 }
 
 .sidebar-slide.active {
   left: 0;
+  list-style: none; /* 불릿 제거 */
+  padding: 0;
+  margin: 0;
 }
 
-.sidebar-slide .nav-link {
-  text-align: left;
-  padding: 12px 16px;
-  border-bottom: 1px solid #ddd;
+.sidebar-slide-item {
+  display: inline-block;
+  vertical-align: middle;
+  height: 50px;
+  margin: 5px;
 }
 
-/* body 오버레이 (선택사항) */
-.overlay {
-  display: none;
-  position: fixed;
-  top: 56px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.3);
-  z-index: 998;
-}
-
-.overlay.active {
-  display: block;
+.sidebar-slide-item:hover {
+  background: #d3d3d3;
+  border-radius: 10px;
+  width: 240px;
 }
 
 .search-bar {
-  max-width: 600px;
-  width: 100%;
+  max-width: 500px;
+  min-width: 150px;
+}
+
+.search-bar input{
   border-radius: 40px 0 0 40px;
 }
 
@@ -58,4 +56,59 @@
 }
 .no-underline {
   text-decoration: none;
+}
+
+.main-video{
+  position: fixed;
+  width: 100%;
+}
+
+.card {
+  border: none;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+.card:hover {
+  transform: scale(1.01);
+}
+
+.main-navbar {
+  position: fixed;
+  top: 68px; /* 네비게이션바 아래 */
+  left: 0;
+  width: 80px;
+  height: calc(100vh - 56px);
+  background-color: #f8f9fa;
+  transition: left 0.3s ease;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-navbar a {
+  text-align: center;
+  margin-bottom: 1rem;
+  color: black;
+  text-decoration: none;
+  font-size: 0.9rem;
+  height: 70px;
+}
+
+.main-navbar-item:hover {
+  background: #d3d3d3;
+  border-radius: 10px;
+  width: 70px;
+}
+
+.main-video {
+  margin-top: 10px;
+  margin-left: 100px; /* 사이드바 너비만큼 띄움 */
+  padding: 1rem;
+  width: calc(100% - 100px);
+}
+
+.main-video a {
+  color: #222222;
+  text-decoration: none; /* 밑줄 제거 */
 }
