--- a/css/main.css
+++ b/css/main.css
@@ -1,153 +1,39 @@
-/* ===== 전체 페이지 스크롤 및 부드러운 이동 설정 ===== */
-html, body {
-  overflow-x: hidden;
-
-}
-
-body.modal-open {
-  padding-right: 0 !important;
-}
-
-.modal-open .fixed-top {
-  padding-right: 0 !important;
-}
-
-.modal-backdrop {
-  display: none;
-}
-
-.modal-header{
-  align-items:start;
-}
-
-/* 스크롤 위치 보정 (navbar 높이만큼 여백 추가) */
-#section1 {
-  scroll-margin-top: 80px;
-}
-
-.sidebar-slide {
-  position: fixed;
-  left: -280px;
-  width: 280px;
-  height: 100%;
-  background-color: #f8f9fa;
-  transition: left 0.3s ease;
-  z-index: 1050;
-  padding: 1rem 0;
-}
-
-.sidebar-slide.active {
-  left: 0;
-  margin: 0;
-}
-
-.sidebar-slide-logo{
-  overflow: hidden; /* 로고 영역 스크롤바 숨김 */
-}
-
-.sidebar-slide-content{
-  height: calc(100vh - 70px); /* 화면 높이 - navbar 높이 */
-  overflow-y: auto;
-}
-
-/* 사이드 메뉴 항목 */
-.sidebar-slide-item {
-  height: 50px;
-  display: flex;
-  align-items: center;
-  vertical-align: middle;
-  padding: 0 1rem;
-  margin: 0 5px 0 5px;
-}
-
-.sidebar-slide-item:hover {
-  background: #d3d3d3;
-  border-radius: 10px;
-  margin: 0 5px 0 5px;
-}
-
-.sidebar-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* 반투명 검정 */
-  transition: left 0.3s ease;
-  z-index: 1049; /* 사이드바 바로 아래 */
-  display: none;
-}
-.sidebar-overlay.active {
-  display: block;
-}
-
-.sidebar-close-btn {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  width: 45px;  /* 고정 너비 */
-  height: 45px; /* 고정 높이 */
-}
-.sidebar-close-btn:hover {
-  display: inline-block;
-  width: 45px;
-  height: 45px;
-  background: #d3d3d3;
-  border-radius: 50%;
-}
-
-.sidebar-close-btn .toggler-icon {
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100% 100%;
-}
-
-/* 메인 네비게이션 바 */
-.main-navbar {
-  position: fixed;
-  top: 60px; /* navbar 아래 */
-  left: 0;
-  width: 80px;
-  height: calc(100vh - 56px); /* 화면 높이 - navbar 높이 */
-  background-color: #f8f9fa;
-  transition: left 0.3s ease;
-  padding: 1rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.main-navbar a {
-  text-align: center;
-  margin-bottom: 1rem;
-  color: black;
-  text-decoration: none;
-  font-size: 0.9rem;
-  height: 80px;
-  padding-top: 10px
-}
-
-.main-navbar-item:hover {
-  background: #d3d3d3;
-  border-radius: 10px;
-  width: 70px;
-  height: 80px;
-}
-
 /* 메인 콘텐츠 영역 */
 .main-video {
-  margin-left: 100px; /* 사이드바 너비 */
-  padding: 1rem;
-  width: calc(100% - 100px);
-  overflow-y: auto;
-  overflow-x: hidden; /* 가로 스크롤 제거 */
+  margin-left: 90px;         /* 사이드바 너비만큼만 */
+  width: calc(100% - 90px);  /* 우측은 여백 없이 */
+  overflow: hidden;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-video-header{
+  display: flex;
+  position: fixed;
+  align-items: center; /* 세로 가운데 정렬 */
+  top: 60px; /* navbar 높이만큼 띄우기 */
+  left: 90px;              /* 사이드바 너비만큼 띄움 */
+  right: 0;                  /* 오른쪽을 0으로 붙임 */
+  background-color: #ffffff;
+  height: 50px;
+  z-index: 1000;
+
+  overflow-x: auto;     /* 가로 스크롤 허용 */
+  white-space: nowrap;  /* 버튼들이 한 줄에 배치되도록 */
+}
+
+.main-video-button{
+  padding: 0 20px;
+}
+
+.main-video-scroll {
+  box-sizing: border-box;
+  padding: 0 10px;
 }
 
 /* 메인 콘텐츠 링크 */
-.main-video a {
+.main-video-scroll a {
   color: #222222;
   text-decoration: none;
 }
@@ -157,7 +43,6 @@ body.modal-open {
 /* 카드 스타일 */
 .card {
   border: none;
-  border-radius: 10px;
   transition: transform 0.3s ease;
 }
 
@@ -165,11 +50,7 @@ body.modal-open {
   transform: scale(1.01);
 }
 
-.card-title {
-  font-family: "Roboto","Arial",sans-serif;
-}
 .card-text{
-  font-family: "Roboto","Arial",sans-serif;
   margin: 0;
   color: #909090;
 }
@@ -179,60 +60,4 @@ body.modal-open {
   width: 40px;
   background: none;
   border: none;
-}
-
-/* ===== 입력창 / 버튼 ===== */
-
-/* 검색 바 */
-.search-bar {
-  max-width: 500px;
-  min-width: 150px;
-}
-
-.search-bar input {
-  border-radius: 40px 0 0 40px;
-}
-
-/* 검색 버튼 */
-.search-btn {
-  background-color: #f8f8f8;
-  border: 1px solid #d3d3d3;
-  border-radius: 0 40px 40px 0;
-}
-
-/* 기타 버튼 (maid-btn) */
-.make-btn {
-  background-color: #f8f8f8;
-  border: 1px solid #d3d3d3;
-  border-radius: 40px;
-  height: 40px;
-  text-align: center;
-}
-
-.make-btn:hover {
-  background-color: #d3d3d3;
-  border-radius: 40px;
-  height: 40px;
-}
-
-/* ===== 유틸 클래스 ===== */
-
-/* 밑줄 제거 */
-.no-underline {
-  text-decoration: none;
-}
-
-.menu-line{
-  border-top:1px solid #d3d3d3;
-  padding-top: 10px;
-}
-
-.menu-inline{
-  border-top:1px solid #d3d3d3;
-  padding-top: 10px;
-  margin-top: 10px;
-}
-
-.button-img{
-  margin-right: 20px;
 }
