--- a/css/total.css
+++ b/css/total.css
@@ -33,6 +33,12 @@ body.modal-open {
   align-items:start;
 }
 
+.modal-body p:hover{
+  background-color: #e1e1e1;
+  border: none;
+
+}
+
 /* 스크롤 위치 보정 (navbar 높이만큼 여백 추가) */
 #section1 {
   scroll-margin-top: 80px;
@@ -71,6 +77,7 @@ body.modal-open {
   vertical-align: middle;
   padding: 0 1rem;
   margin: 0 5px 0 5px;
+  cursor: pointer;
 }
 
 .sidebar-slide-item:hover {
@@ -147,6 +154,10 @@ body.modal-open {
 }
 
 /* ===== 입력창 / 버튼 ===== */
+.non-btn{
+  background: none;
+  border: none;
+}
 
 /* 검색 바 */
 .search-bar {
@@ -161,21 +172,21 @@ body.modal-open {
 /* 검색 버튼 */
 .search-btn {
   background-color: #f8f8f8;
-  border: 1px solid #d3d3d3;
+  border: 1px solid #e1e1e1;
   border-radius: 0 40px 40px 0;
 }
 
 /* 기타 버튼 (maid-btn) */
 .make-btn {
-  background-color: #e1e1e1;
-  border: 1px solid #e1e1e1;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
   border-radius: 40px;
   height: 40px;
   text-align: center;
 }
 
 .make-btn:hover {
-  background-color: #d3d3d3;
+  background-color: #e1e1e1;
   border-radius: 40px;
   height: 40px;
 }
