--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   display: flex;
   position: fixed;
   align-items: center; /* 세로 가운데 정렬 */
-  top: 60px; /* navbar 높이만큼 띄우기 */
+  top: 58px; /* navbar 높이만큼 띄우기 */
   left: 90px;              /* 사이드바 너비만큼 띄움 */
   right: 0;                  /* 오른쪽을 0으로 붙임 */
   background-color: #ffffff;
@@ -38,6 +38,10 @@
   text-decoration: none;
 }
 
+.main-video-scroll .card-img-top {
+  border-radius: 10px;
+}
+
 /* ===== UI 컴포넌트 ===== */
 
 /* 카드 스타일 */
@@ -60,4 +64,34 @@
   width: 40px;
   background: none;
   border: none;
+}
+
+/* 동영상 hover */
+.video-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-img-top {
+  width: 100%;
+  display: block;
+  transition: opacity 0.3s;
+}
+
+.iframe-wrapper {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.video-card:hover .iframe-wrapper {
+  display: block;
+}
+
+.video-card:hover .card-img-top {
+  opacity: 0;
 }
