--- a/css/main.css
+++ b/css/main.css
@@ -44,22 +44,20 @@
 
 /* ===== UI 컴포넌트 ===== */
 
-/* 카드 스타일 */
-.card {
-  border: none;
-  transition: transform 0.3s ease;
-}
+/*!* 카드 스타일 *!*/
+/*.card {*/
+/*  border: none;*/
+/*  transition: transform 0.3s ease;*/
+/*}*/
 
-.card:hover {
-  transform: scale(1.01);
-}
+/*.card:hover {*/
+/*  transform: scale(1.01);*/
+/*}*/
 
-.card-text{
-  margin: 0;
-  color: #909090;
-}
-
-
+/*.card-text{*/
+/*  margin: 0;*/
+/*  color: #909090;*/
+/*}*/
 
 .card-img-top {
   width: 100%;
@@ -67,20 +65,20 @@
   transition: opacity 0.3s;
 }
 
-.iframe-wrapper {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
-  z-index: 2;
-  pointer-events: none;
-}
+/*.iframe-wrapper {*/
+/*  position: absolute;*/
+/*  top: 0; left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  display: none;*/
+/*  z-index: 2;*/
+/*  pointer-events: none;*/
+/*}*/
 
-.video-card:hover .iframe-wrapper {
-  display: block;
-}
+/*.video-card:hover .iframe-wrapper {*/
+/*  display: block;*/
+/*}*/
 
-.video-card:hover .card-img-top {
-  opacity: 0;
-}
+/*.video-card:hover .card-img-top {*/
+/*  opacity: 0;*/
+/*}*/
