--- a/css/total.css
+++ b/css/total.css
@@ -255,3 +255,57 @@ body.modal-open {
   margin-right: 20px;
 }
 
+
+/* ================================
+   텍스트 스타일
+================================ */
+/* 카드 스타일 */
+.card {
+  border: none;
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: scale(1.01);
+}
+
+.card-text{
+  margin: 0;
+  color: #909090;
+}
+
+.card-title {
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 1rem;
+  margin-bottom: 4px;
+}
+
+.card-text {
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 0.80rem;
+  color: #909090;
+  margin: 0;
+}
+
+
+
+/* ================================
+   iframe
+================================ */
+.iframe-wrapper {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.video-card:hover .iframe-wrapper {
+  display: block;
+}
+
+.video-card:hover .card-img-top {
+  opacity: 0;
+}
