--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@
 }
 
 .main-video-scroll {
+  display: flex;
+  flex-wrap: wrap;
   box-sizing: border-box;
   padding: 0 10px;
 }
@@ -43,42 +45,27 @@
 }
 
 /* ===== UI 컴포넌트 ===== */
-
-/*!* 카드 스타일 *!*/
-/*.card {*/
-/*  border: none;*/
-/*  transition: transform 0.3s ease;*/
-/*}*/
-
-/*.card:hover {*/
-/*  transform: scale(1.01);*/
-/*}*/
-
-/*.card-text{*/
-/*  margin: 0;*/
-/*  color: #909090;*/
-/*}*/
-
 .card-img-top {
   width: 100%;
   display: block;
   transition: opacity 0.3s;
 }
 
-/*.iframe-wrapper {*/
-/*  position: absolute;*/
-/*  top: 0; left: 0;*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*  display: none;*/
-/*  z-index: 2;*/
-/*  pointer-events: none;*/
-/*}*/
+.video-card-wrapper {
+  flex: 1 1 calc(33.333% - 1rem);
+  max-width: calc(33.333% - 1rem); /* 고정 */
+}
 
-/*.video-card:hover .iframe-wrapper {*/
-/*  display: block;*/
-/*}*/
+@media (max-width: 992px) {
+  .video-card-wrapper {
+    flex: 1 1 calc(50% - 1rem);
+    max-width: calc(50% - 1rem);
+  }
+}
 
-/*.video-card:hover .card-img-top {*/
-/*  opacity: 0;*/
-/*}*/
+@media (max-width: 768px) {
+  .video-card-wrapper {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+}
